fix(Datasets): Prevent weird jumping with buttons

--- a/src/components/core/Datasets/style.css
+++ b/src/components/core/Datasets/style.css
@@ -128,9 +128,7 @@
 }
 
 .button {
-  position: absolute;
   left: -7px;
-  top: -7px;
   width: 30px !important;
   height: 30px !important;
 }
